updated for the paths about imgs and html's
yes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
      <meta charset="UTF-8">
 
-     <link rel="icon" type="image/x-icon" href="/img/unnamed.png">
+     <link rel="icon" type="image/x-icon" href="unnamed.png">
      <title>MainYTlol</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
@@ -32,13 +32,13 @@
                 </h2>
                 <h4>Youtube</h4>
                <li><a href="https://www.youtube.com/channel/UCgfUeimQcRa4l6wJAHWsj_Q" target="_blank">click here</a></li>
-               <img src="img/unnamed.png">
+               <img src="unnamed.png">
                <h4>Discord</h4>
                <li><a href="notavailablelol.html">click here</a></li>
-               <img src="img/téléchargement.jpeg">
+               <img src="téléchargement.jpeg">
                <h4>nothing</h4>
                     <li><a href="https://gdcolon.com/%F0%9F%97%BF" target="_blank">click here</a></li>
-                    <img src="img/moai_1f5ff.png">
+                    <img src="moai_1f5ff.png">
             </div>
             <section id="end">
                 <p>photos i used: ⬇</p>
